fix(compat): hide scrollbar on Chrome

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -229,6 +229,9 @@ aside ol a.hl {
     width: 360px;
     scrollbar-width: none;
   }
+  aside ol::-webkit-scrollbar {
+    display: none;
+  }
   aside ol a {
     max-width: 360px;
   }
